[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gregory Danielson III", email = "gregory.danielson3@gmail.com"},
]
dependencies = ["pygsheets"]
requires-python = ">=3.10"
license = {text = ""}

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
